Fix trunk-only GetElementById regression.  Bug 311681, r=sicking, sr=jst